cluster.tf
resource "aws_eks_cluster" "this" {
  name    = "${var.cluster_name}"
  version = "${var.cluster_version}"

  role_arn = "${aws_iam_role.cluster.arn}"

  vpc_config = {
    security_group_ids = ["${aws_security_group.cluster.id}"]
    subnet_ids = ["${var.private_subnets}"]
  }
  
  depends_on = [
    "${aws_iam_role_policy_attachment.cluster_AmazonEKSClusterPolicy}",
    "${aws_iam_role_policy_attachment.cluster_AmazonEKSServicePolicy}"
  ]
}

data "aws_iam_policy_document" "cluster"{
  statement {
    actions = ["sts:AssumeRole"]

    principals {
      type = "Service"
      identifiers = ["eks.amazonaws.com"]
    }
  }
}

resource "aws_iam_role" "cluster" {
  name = "${var.cluster_name}-cluster"
  assume_role_policy = "${data.aws_iam_policy_document.cluster.json}"
  force_detach_policies = true
}

resource "aws_iam_role_policy_attachment" "cluster_AmazonEKSClusterPolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
  role = "${aws_iam_role.cluster.name}"
}

resource "aws_iam_role_policy_attachment" "cluster_AmazonEKSServicePolicy" {
  policy_arn = "arn:aws:iam::aws:policy/AmazonEKSServicePolicy"
  role = "${aws_iam_role.cluster.name}"
}

resource "aws_security_group" "cluster" {
  name = "${var.cluster_name}-cluster"
  description = "EKS Cluster ENI"
  vpc_id = "${var.vpc_id}"

  ingress {
    description = "Allow Workers to Masters"
    from_port = 443
    to_port = 443
    protocol = "tcp"
    security_groups = ["${aws_security_group.workers.name}"]
  }

  egress {
    # Full port range to allow kubectl proxy
    description = "Allow Masters to Workers"
    from_port = 0
    to_port = 65535
    protocol = "tcp"
    security_groups = ["${aws_security_group.workers.name}"]
  }

}
